Fixed margin issues with media queries and changed media queries from 850px to 900px for text spacing.

--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@ nav{
     font-family: 'Poppins', sans-serif;
     justify-content: space-around;
     min-height: 8vh;
+    position: relative;
 }
 
 .logo{
     color: white;
-    text-transform: uppercase;
-    letter-spacing: 5px;
     font-size: 20px;
+    letter-spacing: 5px;
+    position: relative;
+    text-transform: uppercase;
     z-index: 1;
 }
 
@@ -95,68 +97,45 @@ nav{
 }
 
 
-/* @media screen and (max-width:1195px) {
-    
+@media screen and (max-width:1080px) {
 .nav-links{
     display: flex;
     justify-content: space-around;
-    width: 60%;
+    width: 50%;
     }
 
-.textContainer{ 
-    background-image: url(assets/images/fruits&vegetables.jpg);
-    background-repeat: no-repeat;
-    background-size: 50rem 25rem;
-    align-content: row;
-    display: flex;
-    border-style: solid;
-    border-width: 1px;
-    border-color: lightgray;
-    width: 50rem;
-    height: 25rem;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 100px;
-} 
-
-
-.textContainer h1{
-    font-size: x-large;
-    width: 50rem;
-    padding-left: 22rem;
-    padding-top: 7rem;
 }
 
-.textContainer h4{
-    font-size: small;
-    padding-left: 23.5rem;
-    padding-top: 1rem;
-}   
+@media screen and (max-width:900px) {
+.burger{
+    display: block;
+}
 
+.jumbotron{
+    margin-top: 2rem;
+}
 
-} */
+.logo{
+    z-index: 2;
+}
 
-@media screen and (max-width:850px) {
 .nav-links{
-    position: absolute;
-    margin-top: 50px;
-    height: 50vh;
-    top: 0px;
+    align-items: center;
     background-color: rgb(41, 241, 41);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
+    height: 60vh;
+    margin-top: 2rem;
+    position: absolute;
+    top: 0px;
     transform: translateY(-100%);
     transition: transform 0.5s ease-in;
+    width: 100%;
+    z-index: 1;
 }
 
 .nav-links li{
     opacity: 0;
-}
-
-.burger{
-    display: block;
 }
 
 .nav-active{
@@ -187,95 +166,4 @@ nav{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px, -6px);
 }
-/* 
-@media screen and (max-width:600px) {
-    
-.textContainer{
-    background-image: url(assets/images/fruits&vegetables.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 20rem;
-    align-content: center;
-    display: flex;
-    border-style: solid;
-    border-width: 1px;
-    border-color: lightgray;
-    width: 100%;
-    height: 20rem;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 100px;
-} 
-
-.textContainer{
-    width: 100%;
-    text-align: center;
-    padding-top: 2rem;
-    padding-left: 1rem;
 }
-
-} */
-
-/* @media screen and (max-width:450px) {
-    .textContainer h1{
-        text-align: center;
-        font-size: 20px;
-        padding-left: 7rem;
-        padding-top: 7rem;
-    }
-    
-    .textContainer h4{
-        font-size: small;
-        text-align: center;
-        width: 85%;
-        padding-left: 7rem;
-       
-    }
-} */
-
-/* @media screen and (max-width:420px), (min-width:320px) {
-    .textContainer{
-        background-image: url(assets/images/fruits&vegetables.jpg);
-        background-repeat: no-repeat;
-        background-size: 100% 300px;
-        align-content: center;
-        display: flex;
-        border-style: solid;
-        border-width: 1px;
-        border-color: lightgray;
-        width: 85%;
-        height: 300px;
-        margin: 0 auto;
-        margin-top: 20px;
-        margin-bottom: 100px;
-    } 
-
-    nav{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        min-height: 10vh;
-        background-color: rgb(41, 241, 41);
-        font-family: 'Poppins', sans-serif;
-    }
-
-    .nav-active{
-        width: 100%;
-        transform: translateX(0%);
-    }
-
-    .textContainer h1{
-        text-align: center;
-        font-size: 1rem;
-        width: 80%;
-        padding-left: 4rem;
-        padding-top: 6rem;
-    }
-    
-    .textContainer h4{
-        font-size: small;
-        text-align: center;
-        width: 80%;
-        padding-left: 4rem;
-        padding-top: 20px;
-    } */
-} 
